--- a/PA165_pneuservis/WebUI/src/main/webapp/css/pneuservis.css
+++ b/PA165_pneuservis/WebUI/src/main/webapp/css/pneuservis.css
@@ -22,3 +22,11 @@
 .form-signin {
   padding-top: 15px;
 }
+
+select[multiple], select[size] {
+    min-height: 195px;
+}
+
+option {
+    padding: 4px;
+}
